<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".winnerpage">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im"
            android:layout_width="wrap_content"
            android:layout_height="251dp"
            android:layout_gravity="center"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/trophy"
            android:contentDescription="@string/imagg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hey_congratulations"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name33"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_score"
            android:textColor="@color/grey1"
            android:textSize="20sp"
            android:textColorHint="@color/grey1"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish1"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            />


    </LinearLayout>


</LinearLayout>