<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/k"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"

        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="50sp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginEnd="50sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:gravity="center">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:gravity="center">

            </TextView>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp">
               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/edtext"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginTop="10dp"
                   android:hint="Name"
                   android:layout_marginBottom="10dp">

               </androidx.appcompat.widget.AppCompatEditText>

           </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit1"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="10dp">

            </Button>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>




</LinearLayout>